--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <ul>
     </ul>
   </div>
-  <script src="js/main.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
